CHANGES.txt - 08/04/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- The pdftops filter did not compile with GCC 4.0 (STR
	  #1226)
	- The texttops filter did not highlight preprocessor
	  directives followed by a tab properly.
	- HP PJL output now uses both JOB DISPLAY and RDYMSG
	  commands to show the current job on the printer's
	  display (STR #1218)
	- Local authentication certificates are now stored in
	  /var/run/cups/certs by default instead of
	  /etc/cups/certs (STR #1211)
	- Backends now use "&" to separate options in device
	  URIs; "+" is still recognized but is deprecated (STR
	  #842)
	- The USB backend no longer supports the usb:/dev/foo
	  format on systems that support device ID queries.
	- Forced classification markings did not work when the
	  job-sheets parameters were "none,none".
	- "lpstat -l -p" incorrectly showed all users as allowed,
	  even if the queue was restricted to certain users (STR
	  #801)
	- The scheduler now automatically detects SSL/TLS clients
	  without using the SSLPort/SSLListen directives.
	- The CUPS API and scheduler no longer support SSLv2-
	  encrypted connections.
	- Updated the cupsaddsmb utility to correctly export the
	  CUPS driver for Windows.
	- Fixed a signal-handling bug in httpRead() which
	  ultimately caused the server to print multiple copies
	  when it was busy (STR #1184)
	- The cupsFile API now uses the O_APPEND option when
	  opening files in append mode (STR #990)
	- The md5.h header and md5_* functions are now officially
	  private and have been renamed to avoid conflicts with
	  other implementations with the same name.
	- The pdftops filter incorrectly embedded some Type1
	  fonts (STR #1093)
	- The scheduler didn't detect a closed connection in the
	  middle of an IPP request (STR #1153)
	- The scheduler could block trying to read the job status
	  if there was input pending and the job was cancelled in
	  the same input cycle (STR #1157)